--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       아래 버튼을 눌러 최신 버전 APK 파일을 다운로드하세요.<br>
       <b>Android 전용</b>입니다.
     </div>
-    <a class="btn" href="CRRTDoseCalc.apk" download>APK 다운로드</a>
+    <a class="btn" href="crrt_dose_calc.apk" download>APK 다운로드</a>
     <div class="warn">
       설치 전, <b>설정 &gt; 보안 &gt; 알 수 없는 앱 허용</b>을 꼭 활성화하세요.<br>
       (설치 후 바탕화면에 <b>CRRT Dose Calc</b> 아이콘이 생성됩니다)
